syntax = "proto3";

package products;

option go_package = "github.com/Vladyslav-Kondrenko/grpc.git/api/proto/gen/go/products";

// Service for working with products
service ProductService {
  rpc Fetch(FetchRequest) returns (FetchResponse);
  rpc List(ListRequest) returns (ListResponse);
}

// --- Fetch ---
message FetchRequest {
  string url = 1;
}

message FetchResponse {
  int32 created = 1;   // number of created items
  int32 updated = 2;   // number of updated items
  string error = 3;    // error message if something went wrong
}

// --- List ---
message ListRequest {
  PagingParams paging = 1;
  SortingParams sorting = 2;
}

message PagingParams {
  int32 page = 1;      // page number (1-based)
  int32 page_size = 2; // page size
}

message SortingParams {
  string field = 1;     // "name" or "price"
  bool ascending = 2;   // true = ascending order
}

message ListResponse {
  repeated Product products = 1;
  int32 total = 2;     // total count (for pagination)
}

message Product {
  string id = 1;       // in MongoDB typically string
  string name = 2;
  int32 price = 3;
}